test/spec_vectors/simd_lane/fail/module_78.wat
(module (func (result i64) (i64x2.extract_lane 0 (i64.const 0))))